--- a/html/lifts/barbellshrugs.html
+++ b/html/lifts/barbellshrugs.html
@@ -29,7 +29,7 @@
 		<div class="pic">
   			<img src="../../img/lifts/barbellshrug.jpg">
   		</div>
-  		<figcaption>Primary Muscles: Trapeius<br>Secondary Muscles: Rhomboids</figcaption>
+  		
 	</figure>
 
 	<h3 class="de">Description</h2>
@@ -37,7 +37,7 @@
 
 
 	<h4 class="Inst">Instructions</h4>
-	<p class="desc1">Step 1: Standing with your feet shoulder-width apart, place a barbell in front of your thighs, hands shoulder-width apart, palms facing your body, and arms fully extended.<br><br>
+	<p class="desc1">Step 1: Standing with your feet shoulder-width apart, place a barbell in front of your thighs, hands <br> shoulder-width apart, palms facing your body, and arms fully extended.<br><br>
 
 	Step 2: Keeping your arms straight, shrug your shoulders as high as you can. Pasue, then lower to start postion.</p>
 	
