--- a/html/lifts/benchpress.html
+++ b/html/lifts/benchpress.html
@@ -37,9 +37,9 @@
 
 
 	<h4 class="Inst">Instructions</h4>
-	<p class="desc1">Step 1: Lie on your back on a bench. Grasp a barbell with a overhand grip just wider than shoulder width apart and hold it above your chest with you arms fully extended.<br><br>
+	<p class="desc1">Step 1: Lie on your back on a bench. Grasp a barbell with a overhand grip just wider than shoulder <br> width apart and hold it above your chest with you arms fully extended.<br><br>
 
-	Step 2: Lower the bar straight down in controlled motion. Make sure you keep your elbows tucked in close to your body so your upper arms form a 45-degree angle to your body in the down position. Pause, and then press the bar in a straight line back up to the starting position. <br><br>
+	Step 2: Lower the bar straight down in controlled motion. Make sure you keep your elbows tucked <br> in close to your body so your upper arms form a 45-degree angle to your body in the down position. <br> Pause, and then press the bar in a straight line back up to the starting position. <br><br>
 
 	</p>
 
