--- a/html/lifts/cablerows.html
+++ b/html/lifts/cablerows.html
@@ -29,7 +29,7 @@
 		<div class="pic">
   			<img src="../../img/lifts/cablerow.jpg">
   		</div>
-  		<figcaption>Primary Muscles: Lats & Trapezius<br>Secondary Muscles: Biceps & Rear Deltoids</figcaption>
+  		
 	</figure>
 
 	<h3 class="de">Description</h3>
@@ -37,9 +37,9 @@
 
 
 	<h4 class="Inst">Instructions</h4>
-	<p class="desc1">Step 1: Sit slightly forward on the platform and grasp the cable attachment. slide hips back, positioning your knees with a slight bend.<br><br>
+	<p class="desc1">Step 1: Sit slightly forward on the platform and grasp the cable attachment. slide hips back, <br> positioning your knees with a slight bend.<br><br>
 
-	Step 2: Pull the handle straight into your chest, bending at the elbow and squeezing your shoulder blades together. Remain upright throughout and do not sway during the movement.
+	Step 2: Pull the handle straight into your chest, bending at the elbow and squeezing your <br> shoulder blades together. Remain upright throughout and do not sway during the movement.
 
 	</p>
 
