--- a/html/lifts/calfraise.html
+++ b/html/lifts/calfraise.html
@@ -27,7 +27,7 @@
 		<div class="pic">
   		<img src="../../img/lifts/calfraise.jpg">
   		</div>
-  		<figcaption>Primary Muscles: Gastrocnemius,<br>Secondary Muscles: Soleus</figcaption>
+  	
 	</figure>
 
 	<h3 class="de">Description</h3>
@@ -35,11 +35,11 @@
 
 
 	<h4 class="Inst">Instructions</h4>
-	<p class="desc1">Step 1: Position yourself on a leg press machine with only the top half of your foot being on the platform ensuring not to lock your knees.<br><br>
+	<p class="desc1">Step 1: Position yourself on a leg press machine with only the top half of your foot being <br> on the platform ensuring not to lock your knees.<br><br>
 
-	Step 2: Push the platform away from you as if you were going to stand on your toes. Hold this position for about 2 seconds.<br><br>
+	Step 2: Push the platform away from you as if you were going to stand on your toes. <br> Hold this position for about 2 seconds.<br><br>
 	
-	Step 3: Allow the platform to come towards you by reversing the movement and allowing your foot to make a 80 degree angle with your shin.</p>
+	Step 3: Allow the platform to come towards you by reversing the movement <br> and allowing your foot to make a 80 degree angle with your shin.</p>
 
 	<h5 class="demo">Demonstration</h5>
 	<div class="gif">
