--- a/html/lifts/dumbbellcurl.html
+++ b/html/lifts/dumbbellcurl.html
@@ -27,7 +27,7 @@
 		<div class="pic">
   		<img src="../../img/lifts/dumbbellcurl.jpg">
   		</div>
-  		<figcaption>Primary Muscles: Bicep<br>Secondary Muscles: N/A</figcaption>
+  	
 	</figure>
 
 	<h3 class="de">Description</h3>
@@ -35,7 +35,7 @@
 
 
 	<h4 class="Inst">Instructions</h4>
-	<p class="desc1">Step 1: Hold a dumbbell in each hand and stand with your feet as wide apart as your hips and let your arms hand down at your sides with your palms forward.<br><br>
+	<p class="desc1">Step 1: Hold a dumbbell in each hand and stand with your feet as wide apart as your hips and <br> let your arms hand down at your sides with your palms forward.<br><br>
 
 	Step 2: Pull your abdominals in, stand tall, and keep your knees slightly bent.<br><br>
 
