--- a/html/lifts/dumbbelllateralraise.html
+++ b/html/lifts/dumbbelllateralraise.html
@@ -27,7 +27,7 @@
 		<div class="pic">
   		<img src="../../img/lifts/lateralraise.jpg">
   		</div>
-  		<figcaption>Primary Muscles: Lateral Deltoids<br>Secondary Muscles: Anterior Deltoids</figcaption>
+  		
 	</figure>
 
 	<h3 class="de">Description</h3>
@@ -35,7 +35,7 @@
 
 
 	<h4 class="Inst">Instructions</h4>
-	<p class="desc1">Step 1: Standing in a shoulder-width stance, grab a pair of dumbbells with palms facing inward and let then hang at your sides.<br><br>
+	<p class="desc1">Step 1: Standing in a shoulder-width stance, grab a pair of dumbbells with palms facing <br> inward and let then hang at your sides.<br><br>
 
 	Step 2: Rasie your arms out to the sides until they're at shoulder level.<br><br>
 
