--- a/html/lifts/facepull.html
+++ b/html/lifts/facepull.html
@@ -27,7 +27,7 @@
 		<div class="pic">
   		<img src="../../img/lifts/facepull.jpg">
   		</div>	
-  		<figcaption>Primary Muscles: Rear Delts,<br>Secondary Muscles: </figcaption>
+  		
 	</figure>
 
 	<h3 class="de">Description</h3>
@@ -35,11 +35,11 @@
 
 
 	<h4 class="Inst">Instructions</h4>
-	<p class="desc1">Step 1: Standing with your knees slightly bent and feet shoulder width apart grab the rope with an underhand grip, with your thumbs up.<br><br>
+	<p class="desc1">Step 1: Standing with your knees slightly bent and feet shoulder width apart grab the rope <br>with an underhand grip, with your thumbs up.<br><br>
 
-	Step 2: Take a few steps back from the tower to extend the cable. Keep a strong athletic stance, activating your core and glutes.<br><br>
+	Step 2: Take a few steps back from the tower to extend the cable. Keep a strong athletic <br>stance, activating your core and glutes.<br><br>
 	
-	Step 3: Squeeze your shoulder blades together to pull the handles of the rope in toward your face. Hold the position for 2 seconds.<br><br>
+	Step 3: Squeeze your shoulder blades together to pull the handles of the rope in toward your <br>face. Hold the position for 2 seconds.<br><br>
 
 	Step 4: Return to the starting position, making sure to keep your shoulders up.</p>
 
