--- a/html/lifts/inclinebenchpress.html
+++ b/html/lifts/inclinebenchpress.html
@@ -27,7 +27,6 @@
 		<div class="pic">
   		<img src="../../img/lifts/inclinebenchpress.jpg">
   		</div>
-  		<figcaption>Primary Muscles: Pectoralis Major, Triceps, Anterior Delt <br>Secondary Muscles: Lateral Delt</figcaption>
 	</figure>
 
 	<h3 class="de">Description</h3>
@@ -35,9 +34,9 @@
 
 
 	<h4 class="Inst">Instructions</h4>
-	<p class="desc1">Step 1: Position your body on an incline bench on a 30-45 degree angle. Grab a barbell with an overhand grip that's shoulder-width apart and hold it above your chest. Extend arms upward, locking out elbows.<br><br>
+	<p class="desc1">Step 1: Position your body on an incline bench on a 30-45 degree angle. Grab a barbell with <br> an overhand grip that's shoulder-width apart and hold it above your chest. Extend arms <br> upward, locking out elbows.<br><br>
 
-	Step 2: Lower the bar straight down in a slow, controlled movement to your chest. Pause, then press the bar in a straight line back up to the starting position.<br><br>
+	Step 2: Lower the bar straight down in a slow, controlled movement to your chest. Pause, <br> then press the bar in a straight line back up to the starting position.<br><br>
 	</p>
 
 	<h5 class="demo">Demonstration</h5>
