--- a/html/lifts/lateralpulldown.html
+++ b/html/lifts/lateralpulldown.html
@@ -35,11 +35,11 @@
 
 
 	<h4 class="Inst">Instructions</h4>
-	<p class="desc1">Step 1: Sit at a lat pulldown station and grab the bar with an overhand grip that's just beyond shoulder width. Your arms should be sompletely straight and your torso upright.<br><br>
+	<p class="desc1">Step 1: Sit at a lat pulldown station and grab the bar with an overhand grip that's just<br> beyond shoulder width. Your arms should be sompletely straight and your torso upright.<br><br>
 
-	Step 2: Pull your shoulder blades down and back and bring the bar to your chest. Pause, then slowly return to the starting position.<br><br>
+	Step 2: Pull your shoulder blades down and back and bring the bar to your chest. <br> Pause, then slowly return to the starting position.<br><br>
 
-	Step 3: As you exhale, pull the machine lever as far as possible to the back of your thighs by flexing at the knees. Keep your torso stationary at all times. Hold the contracted position for a second.<br><br>
+	Step 3: As you exhale, pull the machine lever as far as possible to the back of <br> your thighs by flexing at the knees. Keep your torso stationary at all times. <br> Hold the contracted position for a second.<br><br>
 
 	Step 4: Slowly return to the starting position as you breathe in.</p>
 
