--- a/html/lifts/legextension.html
+++ b/html/lifts/legextension.html
@@ -37,7 +37,7 @@
 	<h4 class="Inst">Instructions</h4>
 	<p class="desc1">Step 1: Place your hands on the hand bars.<br><br>
 
-	Step 2: Lift the weight while exhauling until your legs are almost straight and don't loc kyour knees. Keep your back against the backrest and do not arch your back.<br><br>
+	Step 2: Lift the weight while exhauling until your legs are almost straight <br> and don't loc kyour knees. Keep your back against the backrest and do not arch your back.<br><br>
 
 	Step 3: Exhale and lower the weight back to starting position.</p>
 
