--- a/html/lifts/ohtricepextension.html
+++ b/html/lifts/ohtricepextension.html
@@ -26,7 +26,6 @@
 		<h2 class="titl">Muscle Activation Diagram</h2>
 		<div class="pic">
   		<img src="../../img/lifts/tricepextension.jpg"></div>
-  		<figcaption>Primary Muscles: Tricep<br>Secondary Muscles: </figcaption>
 	</figure>
 
 	<h3 class="de">Description</h3>
@@ -34,11 +33,11 @@
 
 
 	<h4 class="Inst">Instructions</h4>
-	<p class="desc1">Step 1: Start off standing with your feet shoulder-width apart, keeping your back straight and abs tightly drawn in.<br><br>
+	<p class="desc1">Step 1: Start off standing with your feet shoulder-width apart, keeping your back straight <br> and abs tightly drawn in.<br><br>
 
-	Step 2: Grab and hold onto a rope extension with both hands with your palms facing up and raise the rope over your head as this will be your starting position.<br><br>
+	Step 2: Grab and hold onto a rope extension with both hands with your palms facing up <br> and raise the rope over your head as this will be your starting position.<br><br>
 
-	Step 3: Slowly lower the rope attachment in an arc motion behind your head, feeling a stretch and isolating your tricep muscles.<br><br>
+	Step 3: Slowly lower the rope attachment in an arc motion behind your head, <br> feeling a stretch and isolating your tricep muscles.<br><br>
 
 	Step 4: Hold this position for a count, then slowly raise the rope back up to the start.</p>
 
