--- a/html/lifts/overheadpress.html
+++ b/html/lifts/overheadpress.html
@@ -34,15 +34,15 @@
 
 
 	<h4 class="Inst">Instructions</h4>
-	<p class="desc1">Step 1: Grab the bar with a pronated grip ensuring you arm is making a straight line from the tip of your finger to your elbow and get under the bar. <br><br>
+	<p class="desc1">Step 1: Grab the bar with a pronated grip ensuring you arm is making a straight line<br> from the tip of your finger to your elbow and get under the bar. <br><br>
 
-	Step 2: When getting under the bar bend your knees slightly and straighten them when completely under the bar to lift the weight.<br><br>
+	Step 2: When getting under the bar bend your knees slightly <br> and straighten them when completely under the bar to lift the weight.<br><br>
 
 	Step 3: Breat in deeply to your diaphragm to brace your core and squeeze your glutes for spinal support.<br><br>
 
-	Step 4: Press the weight up while moving your head back in a nodding motion to avoid hitting yourself with the bar ensuring to keep the bar path in a straight vertical line.<br><br>
+	Step 4: Press the weight up while moving your head back in a nodding motion to avoid hitting yourself <br> with the bar ensuring to keep the bar path in a straight vertical line.<br><br>
 
-	Step 5: Continue pressing the weight up while moving your head back to its original position. Avoid locking your elbows at the top of the movement. Allow the weight to come down slowly while breathing out by controlling it and stopping it on your upper chest. When the bar is coming back down the bar path move your head out of the way the same way you did when pressing the weight up.
+	Step 5: Continue pressing the weight up while moving your head back to its original position. <br> Avoid locking your elbows at the top of the movement. Allow the weight to come down slowly <br>while breathing out by controlling it and stopping it on your upper chest. When the bar is <br> coming back down the bar path move your head out of the way the same way you did <br> when pressing the weight up.
 	</p>
 
 	<h5 class="demo">Demonstration</h5>
