--- a/html/lifts/pendlayrow.html
+++ b/html/lifts/pendlayrow.html
@@ -26,7 +26,7 @@
 		<h2 class="titl">Muscle Activation Diagram</h2>
 		<div class="pic">
   		<img src="../../img/lifts/pendlayrow.jpg"></div>
-  		<figcaption>Primary Muscles: Lats, Trapezius, Biceps<br>Secondary Muscles: Rear Delts</figcaption>
+  		
 	</figure>
 
 	<h3 class="de">Description</h3>
@@ -36,7 +36,7 @@
 	<h4 class="Inst">Instructions</h4>
 	<p class="desc1">Step 1: Stand with your mid-foot under the bar.<br><br>
 
-	Step 2: Bend over and grab the bar with a pronated grip. Breath in deeply into your diaphragm making sure to keep your knees bent and back neutral and horizontal.<br><br>
+	Step 2: Bend over and grab the bar with a pronated grip. <br>Breath in deeply into your diaphragm making sure to keep <br>your knees bent and back neutral and horizontal.<br><br>
 	
 	Step 3: Pull the bar against your lower chest.<br><br>
 
