--- a/html/lifts/pullups.html
+++ b/html/lifts/pullups.html
@@ -26,7 +26,7 @@
 		<h2 class="titl">Muscle Activation Diagram</h2>
 		<div class="pic">
   		<img src="../../img/lifts/pullups.jpg"></div>
-  		<figcaption>Primary Muscles: Lats, Traps, Biceps<br>Secondary Muscles: Rectus Abdominus</figcaption>
+  		
 	</figure>
 
 	<h3 class="de">Description</h3>
@@ -36,7 +36,7 @@
 	<h4 class="Inst">Instructions</h4>
 	<p class="desc1">Step 1: Grab the pull up bar with a pronated grip and hang from the bar.<br><br>
 
-	Step 2: Breath into your diaphragm deeply and pull yourself up while externally rotating your shoulders and puffing your chest out. Try to get your chest as close to the bar and your hands as possible.<br><br>
+	Step 2: Breath into your diaphragm deeply and pull yourself up while <br> externally rotating your shoulders and puffing your chest out. Try to <br> get your chest as close to the bar and your hands as possible.<br><br>
 
 	Step 3: Breat out and control yourself as you bring yourself down to a hang.
 	</p>
