--- a/html/lifts/seatedcalfraise.html
+++ b/html/lifts/seatedcalfraise.html
@@ -26,7 +26,7 @@
 		<h2 class="titl">Muscle Activation Diagram</h2>
 		<div class="pic">
   		<img src="../../img/lifts/seatedcalfraise.jpg"></div>
-  		<figcaption>Primary Muscles: Soleus,<br>Secondary Muscles: </figcaption>
+  	
 	</figure>
 
 	<h3 class="de">Description</h3>
@@ -34,7 +34,7 @@
 
 
 	<h4 class="Inst">Instructions</h4>
-	<p class="desc1">Step 1: Take a seat on the machine and place the balls of your feet on the platform with your toes pointed forward - your heels will naturally hang off. Position the base of quads under the knee pad and allow your hands to rest on top.<br><br>
+	<p class="desc1">Step 1: Take a seat on the machine and place the balls of your feet on the platform <br> with your toes pointed forward - your heels will naturally hang off. Position the base <br>of quads under the knee pad and allow your hands to rest on top.<br><br>
 
 	Step 2: Extend your ankles and release the safety bar.<br><br>
 	
