--- a/html/lifts/seatedlegcurl.html
+++ b/html/lifts/seatedlegcurl.html
@@ -26,7 +26,7 @@
 		<h2 class="titl">Muscle Activation Diagram</h2>
 		<div class="pic">
   		<img src="../../img/lifts/seatedlegcurl.jpg"></div>
-  		<figcaption>Primary Muscles: Hamstrings <br>Secondary Muscles: N/A</figcaption>
+  		
 	</figure>
 
 	<h3 class="de">Description</h3>
@@ -34,11 +34,11 @@
 
 
 	<h4 class="Inst">Instructions</h4>
-	<p class="desc1">Step 1: Adjust the machine lever to fit your height and sit on the machine with yoour back against the back support pad.<br><br>
+	<p class="desc1">Step 1: Adjust the machine lever to fit your height and sit on the machine with your <br> back against the back support pad.<br><br>
 
-	Step 2: Place the back of lower leg on top padded lever and secure the lap pad against your thighs, just above the knees. Then grasp the side handles on the machine as you point your toes straight and ensure that the legs are fully straight right in front of you.<br><br>
+	Step 2: Place the back of lower leg on top padded lever and secure the lap pad <br>against your thighs, just above the knees. Then grasp the side handles on the <br> machine as you point your toes straight and ensure that the legs are fully straight right in front of you.<br><br>
 
-	Step 3: As you exhale, pull the machine lever as far as possible to the back of your thighs by flexing at the knees. Keep your torso stationary at all times. Hold the contracted position for a second.<br><br>
+	Step 3: As you exhale, pull the machine lever as far as possible to the back of your thighs by flexing at <br> the knees. Keep your torso stationary at all times. Hold the contracted position for a second.<br><br>
 
 	Step 4: Slowly return to the starting position as you breathe in.</p>
 
