--- a/html/lifts/tricepextension.html
+++ b/html/lifts/tricepextension.html
@@ -26,7 +26,7 @@
 		<h2 class="titl">Muscle Activation Diagram</h2>
 		<div class="pic">
   		<img src="../../img/lifts/tricepextension.jpg"></div>
-  		<figcaption>Primary Muscles: Tricep<br>Secondary Muscles: </figcaption>
+  	
 	</figure>
 
 	<h3 class="de">Description</h3>
@@ -34,11 +34,11 @@
 
 
 	<h4 class="Inst">Instructions</h4>
-	<p class="desc1">Step 1: Stand with your feet shoulder width apart and knees slightly bent. Grab the rope attachment on the cable.<br><br>
+	<p class="desc1">Step 1: Stand with your feet shoulder width apart and knees slightly bent. Grab the rope attachment on <br> the cable.<br><br>
 
-	Step 2: Imagining your elbow as a pull system breath in and pull the rope down while keeping your elbows in place and shoulders externaly rotated. Squeeze at the bottom of the pull for a full range of motion.<br><br>
+	Step 2: Imagining your elbow as a pull system breath in and pull the rope down while keeping your <br> elbows in place and shoulders externaly rotated. Squeeze at the bottom of the pull for a full range of motion.<br><br>
 
-	Step 3: Allow the weight to pull the cable back to the starting position in a controlled manner while breating out and keeping your elbows in place.
+	Step 3: Allow the weight to pull the cable back to the starting position in a controlled manner while <br> breating out and keeping your elbows in place.
 	</p>
 
 	<h5 class="demo">Demonstration</h5>
