--- a/html/about_us.html
+++ b/html/about_us.html
@@ -16,8 +16,9 @@
 				<li class="active"><a href="about_us.html">About Us</a></li>
 			</ul>
 		</div>
-	<div class="meet-team">
 		<h1 class="title">Meet The Team</h1>
+	<div class="meet-team">
+		<div class="container">
 		<span class="border"></span>
 			<div class="pics">
 				<a href="#M"><img src="../img/manny.png" alt=""></a>
@@ -57,6 +58,7 @@
 					Edmund is a Senior majoring in Computer Networking at Wentworth Institute of Technology. Edmund played a major role in the project by assisting in the CSS and developing a large portion of the HTML that is the backbone of our site.
 				</p>
 			</div>
+		</div>
 
 
 
