--- a/html/about_us.html
+++ b/html/about_us.html
@@ -14,6 +14,7 @@
 			<ul>
 				<li><a href="../index.html">Home</a></li>
 				<li class="active"><a href="about_us.html">About Us</a></li>
+				<li><a href="signup.html">Sign Up/Login</a></li>
 			</ul>
 		</div>
 		<h1 class="title">Meet The Team</h1>
@@ -24,7 +25,6 @@
 				<a href="#M"><img src="../img/manny.png" alt=""></a>
 				<a href="#B"><img src="../img/brian.png" alt=""></a>
 				<a href="#E"><img src="../img/estiben.png" alt=""></a>
-				<a href="#Ed"><img src="../img/ed.png" alt=""></a>
 			</div>
 
 			<div class="bio" id="M">
@@ -48,14 +48,6 @@
 				<span class="border"></span>
 				<p>
 					Estiben is a Senior majoring in Computer Networking and minoring in Computer Science at Wentworth Institute of Technology. Estiben played an important role by using his creativity to assist Brian in designing the project and developing a large portion of the CSS styling. Estiben also worked on getting the website up and running on our own domain.
-				</p>
-			</div>
-
-				<div class="bio" id="Ed">
-				<span class="name">Edmund Wright</span>
-				<span class="border"></span>
-				<p>
-					Edmund is a Senior majoring in Computer Networking at Wentworth Institute of Technology. Edmund played a major role in the project by assisting in the CSS and developing a large portion of the HTML that is the backbone of our site.
 				</p>
 			</div>
 		</div>
