--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
 	<meta charset="utf-8">
 	<title>Beatty Boyz Fitness</title>
 	<link rel="stylesheet" href="css/css_index.css"/>
-	<script data-ad-client="ca-pub-9383732555238741" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 </head>
 
 <body>
@@ -16,6 +15,7 @@
 			<ul>
 				<li class="active"><a href="index.html">Home</a></li>
 				<li><a href="html/about_us.html">About Us</a></li>
+				<li><a href="html/signup.html">Sign Up/Login</a></li>
 			</ul>
 		</div>
 		<div class ="div-container">
