--- a/seniorproject/landing.html
+++ b/seniorproject/landing.html
@@ -24,8 +24,8 @@
 			</div>
 
 			<div class="button">
-				<a href="" class="btn">Login</a>
-				<a href="" class="btn">Sign-up</a>
+				<a href="login.html" class="btn">Login</a>
+				<a href="reg.html" class="btn">Register</a>
 			</div>
 		</div>
 	</header>
